add  text to speech and speech to text

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cloud_firestore: ^5.6.6
   icons_plus: ^4.0.0
   shared_preferences: ^2.5.3
+  flutter_tts: ^4.2.2
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
