--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_tts: ^4.2.2
   speech_to_text: ^7.0.0
+  google_generative_ai: ^0.4.7
+  flutter_dotenv: ^5.1.0
+  font_awesome_flutter: ^10.8.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +33,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
