--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,8 @@ plugins {
 
 android {
     namespace = "com.example.translation_app"
-    compileSdk = flutter.compileSdkVersion
+//    compileSdk = flutter.compileSdkVersion
+    compileSdk = 35
 //    ndkVersion = flutter.ndkVersion
     ndkVersion = "25.1.8937393"
 
