--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
+  path_provider: ^2.1.5
+  dio: ^5.8.0+1
+  image_picker: ^1.1.2
+  file_picker: ^10.2.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
