--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,13 @@ dependencies:
   google_fonts: ^6.2.1
   dropdown_button2: ^2.3.9
   path_provider: ^2.1.5
-  dio: ^5.8.0+1
+  dio: ^  5.8.0+1
   image_picker: ^1.1.2
   file_picker: ^10.2.0
   http_parser: ^4.0.2
+  uuid: ^4.5.1
+  flutter_chat_core: ^2.7.0
+  flutter_chat_ui: ^2.7.0
 
 dev_dependencies:
   flutter_test:
